# typed-process

./: .gitignore  .hlint.yaml  .travis.yml  ChangeLog.md  README.md  appveyor.yml  package.yaml  stack-lts-3.yaml  stack-lts-6.yaml  stack-lts-7.yaml  stack.yaml  typed-process.cabal
.github/workflows/: hlint.yml  tests.yml
src/System/Process/: Typed.hs
src/System/Process/Typed/: Internal.hs
test/: SpecHook.hs
test/System/Process/: TypedSpec.hs
