name:                typed-process
version:             0.1.0.0
synopsis:            Run external processes, with strong typing of streams
description:         Please see README.md
homepage:            https://github.com/fpco/typed-process#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            System
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Process.Typed
  build-depends:       base >= 4.7 && < 5
                     , async
                     , bytestring
                     , conduit
                     , conduit-extra
                     , exceptions
                     , process >= 1.2
                     , stm
                     , transformers
  if os(windows)
    cpp-options:       -DWINDOWS
  default-language:    Haskell2010

test-suite typed-process-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       System.Process.TypedSpec
  build-depends:       base
                     , async
                     , base64-bytestring
                     , bytestring
                     , conduit
                     , conduit-extra
                     , hspec
                     , http-conduit >= 2.1.10
                     , temporary
                     , typed-process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/typed-process
